Add API to remove someone from a household
